examples/checker_tests/bad/dupfields-headerunion.p4
header hdr {
    bit<8> f;
}
header_union hu {
    hdr h;
    hdr h;
}
